# Drago

./: APRESENTACAO.md  README.md
Estrutural/01. Componentes/: 01. Componentes.rar
Estrutural/02. Montagem/: 01. Montagem final.rar
Estrutural/03. Componentes .STEP/: 00. Servo Motor MG996R.STEP  00. Servo Motor Micro 9g.STEP  01. base_link.STEP  02. Anel Waist_link.STEP  03. Waist_link.STEP  04. Anel Shoulder_link.STEP  05. Shoulder_link.STEP  06. Anel Elbow_link.STEP  07. Elbow_link.STEP  08. Wrist_link_1.STEP  09. Wrist_link_2.STEP  10. Effector_link.STEP
Software/drago_moveit_pkg/: .setup_assistant
Software/drago_moveit_pkg/config/: initial_positions.yaml  moveit_controllers.yaml
Software/drago_moveit_pkg/launch/: demo.launch.py
Software/drago_pkg/: package.xml
Software/drago_pkg/config/: joint_names_drago.yaml
Software/drago_pkg/launch/: display.launch.xml  gazebo.launch.xml
Software/drago_pkg/meshes/: Shoulder_link.STL  Waist_link.STL  Wrist_1_link.STL  Wrist_2_link.STL  base_link.STL
Software/drago_pkg/urdf/: drago.urdf
Software/drago_serial/: drago_serial.ino
Software/robot_hardware_interface/: CMakeLists.txt  package.xml  ros2_control.urdf.xacro
Software/robot_hardware_interface/include/robot_hardware_interface/: hardware_interface.hpp
Software/robot_hardware_interface/src/: hardware_interface.cpp
drago_moveit_pkg/: CMakeLists.txt  package.xml
drago_moveit_pkg/config/: Drago.ros2_control.xacro  Drago.srdf  Drago.urdf.xacro  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
drago_moveit_pkg/launch/: setup_assistant.launch.py
drago_pkg/: CMakeLists.txt
drago_pkg/config/: config_rviz.rviz
drago_pkg/meshes/: Effector_link.STL  Elbow_link.STL
drago_pkg/urdf/: drago.csv
robot_hardware_interface/: README.md  plugin.xml
