<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_hardware_interface</name>
  <version>0.1.0</version>
  <description>
    ROS 2 Hardware Interface for a 6-DOF robot arm.
    Communicates with an Arduino over a serial port and exposes
    position command interfaces for use with joint_trajectory_controller.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Export the plugin -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
